# LFM-RUS-v2

./: .gitignore  CONFIG.md  README.md  RUNNING.md  diffusion_auto_model_example.md  main.py  plan.md  pyproject.toml  test_pipeline_coverage.py  todo.md
.github/workflows/: test.yml
config_docs/: alignment.md  cpt.md  data_prep.md  pruning.md  sft.md  task_sft.md  tokenizer.md
configs/: alignment.yaml  cpo.yaml  cpt.yaml  data_prep.yaml  pruning.yaml  sft.yaml  task_sft.yaml  tokenizer.yaml
datasets_docs/: alignment.md  cpt.md  data_prep.md  pruning.md  sft.md  task_sft.md  tokenizer.md
docs/: diffusion_research.md  embedding_warmup.md  extra_alignment_methods.md  general_sft_and_alignment.md  lexical_initialization.md  tokenizer_pruning.md
src/: cpt.py  pruning.py  sft.py  task_sft.py  test_cpt.py  test_pruning.py  test_sft.py  tokenizer.py
src/alignment/: __init__.py  iterative_dpo.py  pipeline.py  rejection_sampling.py  rlaif.py  spin.py  vrpo.py
src/alignment/rewards/: rewards.py
src/data_prep/: filters.py  pipeline.py
src/models/diffusion/: __init__.py  configuration_diffusion.py  modeling_diffusion.py
test_spin/: spin_dataset.jsonl
tests/: test_alignment.py  test_cpt.py  test_data_prep.py  test_diffusion.py  test_diffusion_steering.py  test_iterative_dpo.py  test_mdlm_generation.py  test_pipeline_coverage.py  test_pruning.py  test_rewards.py  test_sft.py  test_task_sft.py  test_tokenizer.py  test_vrpo.py
