[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "datasets>=4.8.5",
    "datatrove[all]>=0.8.0",
    "entmax>=1.3",
    "fasttext-wheel>=0.9.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scipy>=1.17.1",
    "tokenizers>=0.22.2",
    "torch>=2.12.0",
    "transformers>=5.9.0",
    "accelerate>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
